# src/main/java/com/sportbooking/identity/application/AuthenticationFailedException.java
@@ -1,0 +1,8 @@
+package com.sportbooking.identity.application;
+
+public class AuthenticationFailedException extends RuntimeException {
+
+	public AuthenticationFailedException() {
+		super("Invalid email or password");
+	}
+}
