# src/main/java/com/sportbooking/identity/application/DuplicateEmailException.java
@@ -1,0 +1,8 @@
+package com.sportbooking.identity.application;
+
+public class DuplicateEmailException extends RuntimeException {
+
+	public DuplicateEmailException() {
+		super("An account with this email already exists");
+	}
+}
