# src/main/java/com/sportbooking/identity/application/PasswordHasher.java
@@ -1,0 +1,8 @@
+package com.sportbooking.identity.application;
+
+public interface PasswordHasher {
+
+	String hash(String password);
+
+	boolean matches(String password, String passwordHash);
+}
