# src/main/java/com/sportbooking/identity/domain/Role.java
@@ -1,0 +1,6 @@
+package com.sportbooking.identity.domain;
+
+public enum Role {
+	PLAYER,
+	OWNER
+}
